@@ -16,6 +16,7 @@ $next UNRELEASED
 - Fix incorrect missing image warnings for drupal builds. BZ #1158725
 - Fix articles not building when using the drupal-book format. BZ #1164640
 - Fix initial title page content being skipped when a user defines a custom bookinfo id. BZ #1165482
+- Fix invalid XML being generated for drupal-book, when titles contain reserved chars. BZ #1165438
 - Changed the drupal feed <parent> field to use the url value instead of the title. BZ #1165724
 
 4.2.6 Tue Oct 21 2014
